--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,7 @@ rel="stylesheet"
 href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css"
 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hospital Management</title>
+    <title>MediSphere Hospital</title>
   </head>
   <body>
     <div id="root"></div>
