New Server and Dashboard Files

--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <link rel="icon" type="image/svg+xml" href="logo.jpeg" />
+    <title>  Landing Page</title>
     <style>
       /* General Styles */
       body {
@@ -84,7 +85,8 @@
       <h1>Welcome to The API Dashboard</h1>
       <p>Choose from the given API endpoints below:</p>
       <div class="btn-container">
-        <a class="btn" href="http://localhost:6900">Frontend</a>
+        <a class="btn" href="http://localhost:5000">Frontend</a>
+        <a class="btn" href="http://localhost:5173">Dashboard</a>
       </div>
     </main>
   </body>
